Sugati/src/objects/Target_Mark_Up__c.object
<CustomObject>
    <fields>
        <fullName>TMU_APC__c</fullName>
        <description>Licencible /Not EU</description>
        <inlineHelpText>LIC, NOT TO EU</inlineHelpText>
        <label>APC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMU_FFP__c</fullName>
        <inlineHelpText>NON-LIC, NOT TO EU</inlineHelpText>
        <label>FFP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMU_TOMS_APC__c</fullName>
        <inlineHelpText>LIC, TRAVEL TO EU</inlineHelpText>
        <label>TOMS + APC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMU_TOMS_FFP__c</fullName>
        <inlineHelpText>NON-LIC, TRAVEL TO EU</inlineHelpText>
        <label>TOMS + FFP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMU_Target_Margin__c</fullName>
        <label>Target Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Target Mark-Up</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TMU_Target_Margin__c</columns>
        <columns>TMU_APC__c</columns>
        <columns>TMU_FFP__c</columns>
        <columns>TMU_TOMS_APC__c</columns>
        <columns>TMU_TOMS_FFP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TM-{0000000}</displayFormat>
        <label>Target Margin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Mark-Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>